objects/Opportunity_Forecast_Staging__c.object
<CustomObject>
    <description>To Delete duplicate forecast records</description>
    <fields>
        <fullName>Amount_Number__c</fullName>
        <formula>VALUE(Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Forecast_Stagings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Record_Type__c</fullName>
        <label>Forecast Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Forecast_Stagings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marked_As_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type__c</fullName>
        <label>Opp Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Id__c</fullName>
        <label>Opportunity Forecast Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Name__c</fullName>
        <label>Opportunity Forecast Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Forecast_Stagings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part_Id__c</fullName>
        <label>Opportunity Part Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part_Name__c</fullName>
        <label>Opportunity Part Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <label>Opportunity Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Number__c</fullName>
        <formula>VALUE( Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Forecast Staging</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Opportunity Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Forecast Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>